5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4353/executions/1649_2703.log
== SUBMITION (2019-04-14 21:10:34) 
-- CODE:
idade=int(input("digite um numero: "))
if(idade>=18):
	print("eleitoidade=int(input("digite sua idade: "))
if(idade>=18):
			print("eleitor")
else:
			print("nao eleitor")
-- EXECUTION TIME:
0.157468
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 3
    print("eleitoidade=int(input())
                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:10:49) 
-- CODE:
idade=int(input("digite sua idade: "))
if(idade>=18):
	print("eleitoidade=int(input("digite sua idade: "))
if(idade>=18):
			print("eleitor")
else:
			print("nao eleitor")
-- EXECUTION TIME:
0.218281
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 3
    print("eleitoidade=int(input())
                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:11:17) 
-- CODE:
idade=int(input("digite sua idade: "))
if(idade>=18):
	print("eleitoidade=int(input("digite sua idade: "))
if(idade>=18):
	print("eleitor")
else:
	print("nao eleitor")
-- EXECUTION TIME:
0.208393
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 3
    print("eleitoidade=int(input())
                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:12:06) 
-- CODE:
idade=int(input("digite sua idade: "))
if(idade>=18):
	print("eleitoidade=int(input("digite sua idade: "))
if(idade>=18):
	print("eleitor")
else:
	print("naoeleitor")
-- EXECUTION TIME:
0.157298
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 3
    print("eleitoidade=int(input())
                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:12:17) 
-- CODE:
idade=int(input("digite sua idade: "))
if(idade>=18):
	print("eleitoidade=int(input("digite sua idade: "))
if(idade>=18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.174311
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 3
    print("eleitoidade=int(input())
                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:14:50) 
-- CODE:
idade=int(input("digite sua idade:	"))
if(idade>=18):
	print("eleitoidade=int(input("digite sua idade:	"))
if(idade>=18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.184535
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 3
    print("eleitoidade=int(input())
                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:16:16) 
-- CODE:
idade=int(input("digite sua idade:		"))
if(idade>=18):
	print("eleitoidade=int(input("digite sua idade:		"))
if(idade>=18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.165665
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 3
    print("eleitoidade=int(input())
                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:03:55) 
-- CODE:
idade=int(input("digite sua idade:	"))
if(idade>=18):
	print("eleitoidade=int(input("digite sua idade:	"))
if(idade>=18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.160244
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 3
    print("eleitoidade=int(input())
                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:05:31) 
-- CODE:
idade=int(input("digite sua idade:	"))
if(idade>=18):
	print("eleitoidade=int(input("digite sua idade:	")))
if(idade>=18):
	print("eleitor")
else:
	print("nao_eleitor")
-- ERROR:
File "XXXX", line 3
    print("eleitoidade=int(input()))
                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:06:26) 
-- CODE:
idade=int(input("digite sua idade:	"))
if(idade>=18):
	print("eleitoidade=int(input("digite sua idade:	")))
	print("eleitor")
else:
	print("nao_eleitor")
-- ERROR:
File "XXXX", line 3
    print("eleitoidade=int(input()))
                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:07:19) 
-- CODE:
idade=int(input("digite sua idade:	"))
if(idade>=18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:07:35) 
-- CODE:
idade=int(input("digite sua idade:	"))
if(idade>=18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.150464
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:07:38) 
-- CODE:
idade=int(input("digite sua idade:	"))
if(idade>=18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
